# SupportMailMaker

./: .gitignore  2025_support_mail_12.html  2025_support_mail_12.md  Dockerfile  Dockerfile.bak  LICENSE  README.Docker.md  README.md  SECURITY.md  SupportMail Ticket Topics  - Content for 11_20_2024.csv  compose.yaml  pyproject.toml  requirements.txt  schema.json
support_mail_maker/: app.py  formatter.py  settings.py  support_mail.schema.json  tasks.py  utils.py
support_mail_maker/static/css/: styles.css
support_mail_maker/support_mail_maker/: app.py  formatter.py  settings.py
support_mail_maker/support_mail_maker/static/css/: styles.css
support_mail_maker/support_mail_maker/templates/: support_mail_template.html
support_mail_maker/templates/: support_mail_template.html  upload_template.csv
support_mail_maker/tests/: test_inputs.py
