[tool.poetry]
name = "supportmailmaker"
version = "0.0.0"
description = "Inteligent Parser and Formatter for Learnsoity SupportMail"
authors = ["Terry Arthur Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
make = "^0.1.6.post2"
invoke = "^2.2.0"
gradio = "^5.5.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
