[tool.poetry]
name = "supportmailmaker"
version = "0.0.0"
description = "Inteligent Parser and Formatter for Learnsoity SupportMail"
authors = ["Terry Arthur Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.4"
invoke = "^2.2.0"
gradio = "^5.5.0"
loguru = "^0.7.2"
pytest = "^8.3.3"
jsonschema = {extras = ["format"], version = "^4.23.0"}
markdownify = "^0.13.1"
gradio-log = "^0.0.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
